--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,13 @@
  td.cell {}
  div.block {}
  div.paragraph {}
+ .p {
+    margin-top: 2px;
+margin-bottom: 2px;
+margin-right: 50px;
+margin-left: 50px;
+}
+
  .font0 { font:4pt Arial, sans-serif; }
  .font1 { font:5pt Arial, sans-serif; }
  .font2 { font:6pt Arial, sans-serif; }
